IntelliJ removed unused import and changed get(0) to getFirst/Last